Customer profile, fixed sidebar overflow

--- a/packages/Webkul/Velocity/src/Resources/assets/sass/components/app.scss
+++ b/packages/Webkul/Velocity/src/Resources/assets/sass/components/app.scss
@@ -1712,7 +1712,6 @@
 }
 
 .sidebar {
-    z-index: 1000000;
     width: $sidebar-width;
 
     .category-content {
